--- a/ATISMobile/ATISMobile/AnnouncementHallsPage.xaml
+++ b/ATISMobile/ATISMobile/AnnouncementHallsPage.xaml
@@ -20,7 +20,7 @@
         <StackLayout>
             <ScrollView BackgroundColor="Transparent">
                 <StackLayout Padding="40,10,40,10" BackgroundColor="Transparent"  >
-                    <Button x:Name="RoadIron" BorderWidth="2" BorderColor="Black"  CornerRadius="15" FontSize="Small"   Text="جاده ای - آهن آلات" BackgroundColor="Green" TextColor="White"  Clicked="RoadIron_ClickedEvent" >
+                    <Button x:Name="RoadIron" BorderWidth="2" BorderColor="Black"  CornerRadius="15" FontSize="Medium"   Text="جاده ای - آهن آلات" BackgroundColor="Green" TextColor="White"  Clicked="RoadIron_ClickedEvent" >
                         <Button.FontFamily>
                             <OnPlatform x:TypeArguments="x:String">
                                 <On Platform="iOS" Value="Samim" />
@@ -29,7 +29,7 @@
                             </OnPlatform>
                         </Button.FontFamily>
                     </Button>
-                    <Button x:Name="RoadIngots"  BorderWidth="2"  BorderColor="Black"    CornerRadius="15"  FontSize="Small"  Text="جاده ای - شمش" BackgroundColor="Green"   TextColor="White" Clicked="RoadIngots_ClickedEvent"  >
+                    <Button x:Name="RoadIngots"  BorderWidth="2"  BorderColor="Black"    CornerRadius="15"  FontSize="Medium"  Text="جاده ای - شمش" BackgroundColor="Green"   TextColor="White" Clicked="RoadIngots_ClickedEvent"  >
                         <Button.FontFamily>
                             <OnPlatform x:TypeArguments="x:String">
                                 <On Platform="iOS" Value="Samim" />
@@ -38,7 +38,7 @@
                             </OnPlatform>
                         </Button.FontFamily>
                     </Button>
-                    <Button x:Name="RoadExport"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Small" Text="جاده ای - صادراتی" BackgroundColor="Green"    TextColor="White" Clicked="RoadExport_ClickedEvent" >
+                    <Button x:Name="RoadExport"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Medium" Text="جاده ای - صادراتی" BackgroundColor="Green"    TextColor="White" Clicked="RoadExport_ClickedEvent" >
                         <Button.FontFamily>
                             <OnPlatform x:TypeArguments="x:String">
                                 <On Platform="iOS" Value="Samim" />
@@ -47,7 +47,7 @@
                             </OnPlatform>
                         </Button.FontFamily>
                     </Button>
-                    <Button x:Name="RoadCoil"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Small" Text="جاده ای - رول و ورق" BackgroundColor="Green"   TextColor="White" Clicked="RoadCoil_ClickedEvent" >
+                    <Button x:Name="RoadCoil"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Medium" Text="جاده ای - رول و ورق" BackgroundColor="Green"   TextColor="White" Clicked="RoadCoil_ClickedEvent" >
                         <Button.FontFamily>
                             <OnPlatform x:TypeArguments="x:String">
                                 <On Platform="iOS" Value="Samim" />
@@ -56,7 +56,7 @@
                             </OnPlatform>
                         </Button.FontFamily>
                     </Button>
-                    <Button x:Name="UrbanIron"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Small" Text="شهری - آهن آلات" BackgroundColor="Magenta"    TextColor="White" Clicked="UrbanIron_ClickedEvent" >
+                    <Button x:Name="UrbanIron"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Medium" Text="شهری - آهن آلات" BackgroundColor="Magenta"    TextColor="White" Clicked="UrbanIron_ClickedEvent" >
                         <Button.FontFamily>
                             <OnPlatform x:TypeArguments="x:String">
                                 <On Platform="iOS" Value="Samim" />
@@ -65,7 +65,7 @@
                             </OnPlatform>
                         </Button.FontFamily>
                     </Button>
-                    <Button x:Name="UrbanCoil"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Small" Text="شهری - رول و ورق" BackgroundColor="Magenta"  TextColor="White"  Clicked="UrbanCoil_ClickedEvent" >
+                    <Button x:Name="UrbanCoil"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Medium" Text="شهری - رول و ورق" BackgroundColor="Magenta"  TextColor="White"  Clicked="UrbanCoil_ClickedEvent" >
                         <Button.FontFamily>
                             <OnPlatform x:TypeArguments="x:String">
                                 <On Platform="iOS" Value="Samim" />
