--- a/ATISMobile/ATISMobile/MenuPage.xaml
+++ b/ATISMobile/ATISMobile/MenuPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ATISMobile.MenuPage"
              BackgroundColor="White"
-             BackgroundImage="@drawable/BG4"
+             BackgroundImage="@drawable/BG992"
              Padding="50">
     <NavigationPage.TitleView>
         <StackLayout>
@@ -21,7 +21,7 @@
     <ContentPage.Content>
         <ScrollView BackgroundColor="Transparent">
             <StackLayout Padding="20,20,20,10" BackgroundColor="Transparent"  >
-                <Button x:Name="ViewTruckDriver" BorderWidth="2" BorderColor="White"   CornerRadius="15" FontSize="Medium"    Text="مشاهده مشخصات راننده" BackgroundColor="Transparent"    TextColor="White"  Clicked="_ViewTruckDriver_ClickedEvent" >
+                <Button x:Name="ViewTruckDriver" BorderWidth="2" BorderColor="Black"   CornerRadius="15" FontSize="Medium"    Text="مشاهده مشخصات راننده" BackgroundColor="Transparent"    TextColor="Black"  Clicked="_ViewTruckDriver_ClickedEvent" >
                     <Button.FontFamily>
                         <OnPlatform x:TypeArguments="x:String">
                             <On Platform="iOS" Value="Samim" />
@@ -30,7 +30,7 @@
                         </OnPlatform>
                     </Button.FontFamily>
                 </Button>
-                <Button x:Name="ViewTruck"  BorderWidth="2"  BorderColor="White"    CornerRadius="15"  FontSize="Medium"  Text="مشاهده مشخصات ناوگان" BackgroundColor="Transparent"     TextColor="White"   Clicked="_ViewTruck_ClickedEvent">
+                <Button x:Name="ViewTruck"  BorderWidth="2"  BorderColor="Black"    CornerRadius="15"  FontSize="Medium"  Text="مشاهده مشخصات ناوگان" BackgroundColor="Transparent"     TextColor="Black"   Clicked="_ViewTruck_ClickedEvent">
                     <Button.FontFamily>
                         <OnPlatform x:TypeArguments="x:String">
                             <On Platform="iOS" Value="Samim" />
@@ -39,7 +39,7 @@
                         </OnPlatform>
                     </Button.FontFamily>
                 </Button>
-                <Button x:Name="ViewTurn"  BorderWidth="2"  BorderColor="White"    CornerRadius="15"  FontSize="Medium"  Text="مشاهده نوبت های صادر شده" BackgroundColor="Transparent"     TextColor="White"  Clicked="_ViewTurn_ClickedEvent"  >
+                <Button x:Name="ViewTurn"  BorderWidth="2"  BorderColor="Black"    CornerRadius="15"  FontSize="Medium"  Text="مشاهده نوبت های صادر شده" BackgroundColor="Transparent"     TextColor="Black"  Clicked="_ViewTurn_ClickedEvent"  >
                     <Button.FontFamily>
                         <OnPlatform x:TypeArguments="x:String">
                             <On Platform="iOS" Value="Samim" />
@@ -48,7 +48,7 @@
                         </OnPlatform>
                     </Button.FontFamily>
                 </Button>
-                <Button x:Name="LoadCapacitor"  BorderWidth="2"  BorderColor="White"   CornerRadius="15"  FontSize="Medium" Text="مخزن بار" BackgroundColor="Transparent"      TextColor="White"  Clicked="_LoadCapacitor_ClickedEvent">
+                <Button x:Name="LoadCapacitor"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Medium" Text="مخزن بار" BackgroundColor="Transparent"      TextColor="Black"  Clicked="_LoadCapacitor_ClickedEvent">
                     <Button.FontFamily>
                         <OnPlatform x:TypeArguments="x:String">
                             <On Platform="iOS" Value="Samim" />
@@ -57,7 +57,7 @@
                         </OnPlatform>
                     </Button.FontFamily>
                 </Button>
-                <Button x:Name="LoadAllocation"  IsVisible="True"  BorderWidth="2"  BorderColor="White"   CornerRadius="15"  FontSize="Medium" Text="تخصیص بار" BackgroundColor="Transparent"     TextColor="White"  Clicked="_LoadAllocation_ClickedEvent">
+                <Button x:Name="LoadAllocation"  IsVisible="True"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Medium" Text="تخصیص بار" BackgroundColor="Transparent"     TextColor="Black"  Clicked="_LoadAllocation_ClickedEvent">
                     <Button.FontFamily>
                         <OnPlatform x:TypeArguments="x:String">
                             <On Platform="iOS" Value="Samim" />
@@ -66,7 +66,7 @@
                         </OnPlatform>
                     </Button.FontFamily>
                 </Button>
-                <Button x:Name="ViewLoadAllocations" IsVisible="True"  BorderWidth="2"  BorderColor="White"   CornerRadius="15"  FontSize="Small"  Text="مشاهده لیست بارهای انتخاب شده &#10; مجوزهای صادر شده" BackgroundColor="Transparent"     TextColor="White" Clicked="_ViewLoadAllocations_ClickedEvent">
+                <Button x:Name="ViewLoadAllocations" IsVisible="True"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Small"  Text="مشاهده لیست بارهای انتخاب شده &#10; مجوزهای صادر شده" BackgroundColor="Transparent"     TextColor="Black" Clicked="_ViewLoadAllocations_ClickedEvent">
                     <Button.FontFamily>
                         <OnPlatform x:TypeArguments="x:String">
                             <On Platform="iOS" Value="Samim" />
@@ -75,7 +75,7 @@
                         </OnPlatform>
                     </Button.FontFamily>
                 </Button>
-                <Button x:Name="MoneyWalletAccounting"  BorderWidth="2"  BorderColor="White"   CornerRadius="15"  FontSize="Medium"  Text="کیف پول  &#10; شارژ موجودی" HeightRequest="100" BackgroundColor="Transparent"  TextColor="White"   Clicked="_MoneyWalletAccounting_ClickedEvent" >
+                <Button x:Name="MoneyWalletAccounting"  BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Medium"  Text="کیف پول  &#10; شارژ موجودی" HeightRequest="100" BackgroundColor="Transparent"  TextColor="Black"   Clicked="_MoneyWalletAccounting_ClickedEvent" >
                     <Button.FontFamily>
                         <OnPlatform x:TypeArguments="x:String">
                             <On Platform="iOS" Value="Samim" />
@@ -84,7 +84,7 @@
                         </OnPlatform>
                     </Button.FontFamily>
                 </Button>
-                <Button x:Name="TurnRegistering"  IsVisible="False"   BorderWidth="2"  BorderColor="White"   CornerRadius="15"  FontSize="Medium" Text="صدور نوبت" BackgroundColor="Transparent"    TextColor="White"   >
+                <Button x:Name="TurnRegistering"  IsVisible="True"   BorderWidth="2"  BorderColor="Black"   CornerRadius="15"  FontSize="Medium" Text="صدور نوبت" BackgroundColor="Transparent"    TextColor="Black"   >
                     <Button.FontFamily>
                         <OnPlatform x:TypeArguments="x:String">
                             <On Platform="iOS" Value="Samim" />
